# esp_wifi_setup_app

./: .gitattributes  .gitignore  README.md
common/: Cargo.toml
common/src/: lib.rs
esp_server/: Cargo.toml  sdkconfig.defaults
esp_server/.cargo/: config.toml
esp_server/src/: ble.rs  index.html  main.rs  web.rs
flutter_app/: .gitignore  README.md  pubspec.yaml
flutter_app/android/: build.gradle  settings.gradle
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/example/smart_bartender_app/: MainActivity.kt
flutter_app/android/droidplug/: build.gradle
flutter_app/android/droidplug/src/main/java/com/nonpolynomial/btleplug/android/impl/: Adapter.java  Peripheral.java
flutter_app/integration_test/: simple_test.dart
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: ble_setup.dart  main.dart  state_handler.dart  wifi_input.dart
flutter_app/lib/rust/: lib.dart
flutter_app/lib/rust/api/: ble.dart  setup.dart  state.dart
flutter_app/linux/: CMakeLists.txt  my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/rust/: Cargo.toml
flutter_app/rust/src/api/: ble.rs  mod.rs  setup.rs  state.rs
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
