[package]
name = "esp-server"
version = "0.1.0"
authors = ["MnlPhlp <online@philipp-manuel.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.1", default-features = false ,features = ["std", "binstart", "alloc", "embassy-time-driver"] }
esp-idf-hal =  { version = "0.43.1", features = ["critical-section", "embassy-sync"] }
anyhow = "1.0.79"
edge-executor = "0.4.1"
esp32-nimble = "0.6.1"
common = { path = "../common" }
ssd1306 = "0.8.4"
embedded-hal = "1.0.0"
embassy-time = { version = "0.3.0", features = ["generic-queue"] }
heapless = "0.8.0"

[build-dependencies]
embuild = "0.31.3"
