[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
blec = "0.3.3"
flutter_logger = { version = "0.6.1", features = ["panic"] }
flutter_rust_bridge = "=2.1.0"
log = "0.4.20"
tokio = "1.35.1"

common = { path = "../../common" }
paste = "1.0.14"
